--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-
-
 @import "tailwindcss";
 @import "tw-animate-css";
 @custom-variant dark (&:is(.dark *));
@@ -182,7 +179,37 @@
 }
 
 *::-webkit-scrollbar {
-  display: none;
+  width: 0;
+  height: 0;
+  background: transparent;
+}
+
+/* Show scrollbar when .show-scroll is applied */
+.show-scroll {
+  overflow-y: auto !important;
+  overflow-x: auto !important;
+}
+
+/* Visible scrollbar */
+.show-scroll::-webkit-scrollbar {
+  width: 3px !important;
+  height: 3px !important;
+}
+
+/* Scrollbar track */
+.show-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Scrollbar thumb */
+.show-scroll::-webkit-scrollbar-thumb {
+  background: white;
+  border-radius: 4px;
+}
+
+/* Hover thumb */
+.show-scroll::-webkit-scrollbar-thumb:hover {
+  background: #6b6b6b;
 }
 
 .check {
